--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "lucide-react": "^0.556.0",
-    "@google/genai": "^1.32.0"
+    "@google/genai": "^1.32.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
